[package]
name = "actix-open-net"
version = "0.1.0"
edition = "2021"

[dependencies]
# UUID generation and parsing
uuid = { version = "1.6", features = ["v4"] }

# Cryptography
aes = "0.8"
cfb-mode = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
md-5 = "0.10"
hmac = "0.12"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Random number generation
rand = "0.8"

[dev-dependencies]
# Property-based testing
proptest = "1.4"
